# FlowMonitoringAndAnalysis

./: .gitignore  Dockerfile  LICENSE  MeshTopo.py  Notes.md  README.md  demo.sh  pyproject.toml  requirements.txt
app/: app.py
data/: Untitled.ipynb
database/: docker-compose.yaml
mininet/: MeshTopo.py  iperf3_test.sh  tree.py
notebooks/: InfluxdbTest.ipynb  MonitorTesting.ipynb  Untitled.ipynb  Untitled1.ipynb
src/: main.py
src/datasets/: supervised_dataset.py
src/models/: simple_model.py  unsupervised.py
src/streaming_utils/: camera.py  client.py  create_dataset.py  data_rate.py  net_gears_client_side.py  net_gears_server_side.py  server.py  udp_client.py  udp_packets.py  udp_server.py  utils.py  video_grabber.py
src/utils/: data_generators.py
