[tool.poetry]
name = "flowmonitoringandanalysis"
version = "0.1.0"
description = "Machine Learning Project for Monitoring Media Streaming quality"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.4.0"
flask = "^1.1.2"
gunicorn = "^20.0.4"
jedi = "^0.16.0"
pytorch_lightning = "^0.7.3"
jsonschema = "^3.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
